fix text overflow in cards

--- a/src/components/OfferCard/OfferCard.module.scss
+++ b/src/components/OfferCard/OfferCard.module.scss
@@ -18,10 +18,13 @@
 
   .text {
     text-align: left;
+    height: 300px;
+    width: 100%;
     font-size: 17px;
     margin: 10px;
     color: #ECB365;
     white-space: pre-wrap;
+    overflow-y: hidden;
   }
 
   .footer {
